# project-mirage

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.cabal  home.html  image_processing.py  index.css  index.html  main.hs  main.py  package-lock.json  package.yaml  pixel-art.html  requirements.txt  script.js
assets/images/: readme.md
static/js/: .eslintrc.json  afford.js  fscripts.js  index.js  pixel-art.js  rock-paper-scissors.js
static/js/MIDI/: LoadPlugin.js  Plugin.js
static/js/Window/: DOMLoader.script.js
static/scripts/: fscripts.js
static/styles/: afford.css  flowers.css  fstyles.css  index.css  loginandregister.css  navbar.css  pixel-art.css  rock-paper-scissors.css  thala.css
templates/: 3d-piano-player.html  _navbar.html  afford.html  filter.html  flowers.html  index.html  login.html  pixel-art.html  register.html  rock-paper-scissors.html  thalacalci.html
utils/: generate.py
