name:                app
version:             0.1.0.0
cabal-version:       >=1.10
build-type:          Simple

executable app
  main-is:             main.hs
  build-depends:       base >=4.7 && <5
                     , vector
                     , digits
  hs-source-dirs:      src
  default-language:    Haskell2010